GEN-341; move DLPathNormalizer to epc link translator module